--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +8,8 @@
 </head>
 <body>
     
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis saepe, placeat rerum laboriosam assumenda dicta explicabo, nemo officiis deserunt expedita maxime quas accusantium sed ipsa repellat? Laborum necessitatibus impedit sed!</p>
+
 </body>
 </html>
